--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,12 +1,11 @@
 [defaults]
-#INVENTORY = farm.yml
 inventory = farm
 retry_files_enabled = False
-callback_whitelist = profile_tasks
+# callback_whitelist = profile_tasks
 forks = 10
 interpreter_python=auto_silent 
 # strategy = debug
-
+vault_password_file = ./.vault_pass
 
 [ssh_connection]
 pipelining = True
