--- a/.gitignore
+++ b/.gitignore
@@ -14,11 +14,10 @@ facts/*
 # attached roles
 roles/ansible-role-grafana/
 
-# preserve the running configuration
-# add how to set these files up in the documentation
-farm/*
+# preserve the running configuration in the root folder.
+./farm.yml
 
 # SMELL remove when ready
-group_vars/farmer
-group_vars/workers
+# group_vars/farmer
+# group_vars/workers
 
