--- a/roles/common/tasks/pip.yml
+++ b/roles/common/tasks/pip.yml
@@ -9,8 +9,8 @@
       force: yes
     become: true
     with_items:
-      - "python-pip"
-      - "python-dev"
+      - "python3-pip"
+      - "python3-dev"
       - "build-essential"
 
   - name: Upgrade pip
