--- a/roles/nfs4_mount/tasks/main.yml
+++ b/roles/nfs4_mount/tasks/main.yml
@@ -4,16 +4,33 @@
 # this snippet from https://github.com/ome/ansible-role-nfs-mount/blob/master/tasks/main.yml
 # bsd-2-clause license
 
-- name: Mount NFS share
-  become: true
-  mount:
-    fstype: nfs
-    name: "{{ item.path }}"
-    opts: "vers={{ nfs_version }},{{ item.opts | default(nfs_mount_opts) }}"
-    src: "{{ item.location }}"
-    dump: "{{ item.dump | default(omit) }}"
-    passno: "{{ item.passno | default(omit) }}"
-    state: "{{ item.state | default( 'mounted' ) }}"
-  with_items: "{{ nfs_share_mounts }}"
-  when: pifarm_nfs_share_mounts is defined and (pifarm_nfs_share_mounts|length>0)
-  tags: mount_nfs
+- block:
+
+  - name: Install NFS mount utility
+    become: true
+    yum:
+      name: nfs-utils
+      state: present
+    when: ansible_os_family == "RedHat"
+
+  - name: Install NFS mount utility
+    become: true
+    apt:
+      pkg: nfs-common
+      state: present
+    when: ansible_os_family == "Debian"
+    
+  - name: Mount NFS shares
+    become: true
+    ansible.posix.mount:
+      fstype: nfs4
+      name: "{{ item.path }}"
+      opts: "vers={{ nfs_version }},{{ item.opts | default(nfs_mount_opts) }}"
+      src: "{{ item.location }}"
+      dump: "{{ item.dump | default(omit) }}"
+      passno: "{{ item.passno | default(omit) }}"
+      state: "{{ item.state | default( 'mounted' ) }}"
+    with_items: "{{ pifarm_nfs_share_mounts }}"
+
+  when:
+    - pifarm_nfs_share_mounts is defined and (pifarm_nfs_share_mounts|length>0)
