nfs input and export work.  removed hard coding

--- a/farm.yml
+++ b/farm.yml
@@ -8,6 +8,8 @@ all:
     # SMELL  hardcoded IP 
     prometheus_monitor_ip: 192.168.11.10
 
+    pifarm_update_centos: false
+
   children:
 
     # ................................................
