working prometheus and refactoring initialize-workers

--- a/farm-tools/prometheus_server/defaults/main.yml
+++ b/farm-tools/prometheus_server/defaults/main.yml
@@ -3,4 +3,4 @@
 pifarm_install_prometheus: False
 
 prometheus_install_snmp: False
-prometheus_router_ip: 192.168.1.1
+prometheus_snmp_target: 192.168.1.1
