--- a/roles/iozone/vars/main.yml
+++ b/roles/iozone/vars/main.yml
@@ -1,5 +1,5 @@
 ---
 
-iozone_working_dir:  /tmp
-iozone_testmount: /rhome
-iozone_flags: "-aczR -g 2G"
+#iozone_working_dir:  /tmp
+#iozone_testmount: /rhome
+#iozone_flags: "-aczR -g 2G"
