--- a/roles/cluster_prometheus/tasks/collector.yml
+++ b/roles/cluster_prometheus/tasks/collector.yml
@@ -2,14 +2,15 @@
 
 - block:
 
-    - name: Install prometheus server
+    - name: Install prometheus server package on the collector
       package: 
         pkg: prometheus
         state: present
         update_cache: true
       become: true
 
-    - name: Install prometheus node exporter
+    # SMELL verify this is not being done twice
+    - name: Install prometheus node exporter on the collector
       package: 
         pkg: prometheus-node-exporter
         state: present
@@ -25,7 +26,7 @@
         mode: '0755'
       become: true
 
-    - name: Create configuration file
+    - name: Create tailored prometheus configuration file
       template:
         src: prometheus_server.xml.j2
         dest: /etc/prometheus/prometheus.yml
@@ -37,7 +38,7 @@
         - Restart prometheus service
 
     - block:
-      - name: Install snmp with mibs and exporter
+      - name: Install snmp with mibs and exporter for Ubiquiti
         apt: 
           name:
             - prometheus-snmp-exporter
@@ -55,7 +56,7 @@
           mode: '0644'
         become: yes
 
-      - name: Copy the MIB file to the proper location
+      - name: Copy the Ubiquiti MIB file to the proper location
         copy:
           src: UBNT-MIB 
           dest: /var/lib/snmp/mibs/UBNT-MIB
@@ -67,8 +68,6 @@
         - prometheus_install_snmp
 
   when:
-    - pifarm_prometheus_server
-  tags:
-    - configure_prometheus_server
+    - pifarm_prometheus_collector
 
   
