--- a/roles/cluster_prometheus/vars/main.yml
+++ b/roles/cluster_prometheus/vars/main.yml
@@ -1,2 +1,7 @@
 ---
-# vars file for cluster_prometheus
+
+# Assumes this machine is the collector.
+prometheus_server: "{{ ansible_eth0.ipv4.address }}"
+
+# Assumes the whole cluster is using prometheus (workers,helpers)
+scraped_hosts: "{{ hostvars[inventory_hostname]['groups']['workers']  }}"
