--- a/roles/iozone/tasks/run_benchmark.yml
+++ b/roles/iozone/tasks/run_benchmark.yml
@@ -8,18 +8,30 @@
       owner: "{{ hostvars['pi-farmer'].local_user  }}"
       group: "{{ hostvars['pi-farmer'].local_group }}"
 
-- name: test nfs mount
-  command: "./iozone {{iozone_flags }} -f {{ iozone_testmount }}/testfile_{{ inventory_hostname }} -b {{ iozone_working_dir }}/iozone_{{ inventory_hostname }}.xls"
+- name: "Remove file ({{ iozone_working_dir }}/iozone3_out.txt)"
+  ansible.builtin.file:
+    path: "{{ iozone_working_dir }}/iozone3_out.txt"
+    state: absent
+  become: true
+
+- name: "Remove file ({{ iozone_working_dir }}/iozone_{{ inventory_hostname }}.xls)"
+  ansible.builtin.file:
+    path: "{{ iozone_working_dir }}/iozone_{{ inventory_hostname }}.xls"
+    state: absent
+  become: true
+
+- name: RUNNING iozone3 test nfs mount
+  command: "./iozone {{iozone_flags }} -f {{ iozone_testmount }}/testfile_{{ inventory_hostname }} -b {{ iozone_working_dir }}/iozone_{{ inventory_hostname }}.xls | tee {{ iozone_working_dir }}/iozone3_out.txt"
   args:
     chdir: "{{ iozone_working_dir }}/{{ iozone3_ver }}/src/current"
   register: myoutput
   failed_when:
-    - result.rc != 0 or result.failed
+    - myoutput.rc != 0 or myoutput.failed
   become: true
 
-- debug:
-    var: myoutput
-    verbosity: 1
+#- debug:
+#    var: myoutput
+#  verbosity: 1
 
 - name: store locally iozone command results log
   local_action: 
@@ -27,17 +39,18 @@
     content: "{{ myoutput.stdout_lines | join('\n') }}" 
     dest: "{{ lookup('env', 'PWD') }}/benchmarks/iozone_{{ inventory_hostname }}.log"
 
-- ansible.builtin.stat:
+- name: "fstat ({{ iozone_working_dir }}/iozone_{{ inventory_hostname }}.xls)"
+  ansible.builtin.stat:
     path: "{{ iozone_working_dir }}/iozone_{{ inventory_hostname }}.xls"
-  register: report_file
+  register: xls_file
 
 - debug:
     msg: "iozone output does not exist: {{ iozone_working_dir }}/iozone_{{ inventory_hostname }}.xls"
-  when: not report_file.stats.exists
+  when: not xls_file.stat.exists
 
 - name: store locally iozone excel ouput xls
   ansible.builtin.fetch:
     src: "{{ iozone_working_dir }}/iozone_{{ inventory_hostname }}.xls"
     dest: "{{ lookup('env', 'PWD') }}/benchmarks/"
     flat: yes
-  when: report_file.stats.exists
+  when: xls_file.stat.exists
