--- a/roles/update/tasks/main.yml
+++ b/roles/update/tasks/main.yml
@@ -5,14 +5,14 @@
 
 # SMELL  use pi facts????
 
-- name: "Update Debian (raspberry pi)"
+- name: "Update Debian (raspberry pi) JKLJKL"
   include: "update_pi.yml"
   become: true
   when:
     - pifarm_connected_internet 
     - ansible_os_family == "Debian" 
-    - vars['ansible_distribution_release'] == 'buster'
-    - vars['ansible_machine'] == 'aarch64'
+    #- vars['ansible_distribution_release'] == 'buster'
+    #- vars['ansible_machine'] == 'aarch64'
 
 
 - name: "Update Centos systems"
