--- a/roles/worker_config/tasks/main.yml
+++ b/roles/worker_config/tasks/main.yml
@@ -1,14 +1,26 @@
 ---
 
-- include: bash_profile.yml
-  tags:
-    - setup_bash
+- ansible.builtin.include_tasks: bash_profile.yml
 
+- name: More User Friendly List Aliases
+  lineinfile:
+    dest: ~{{ console_user | default(ansible_user) }}/.bashrc
+    line: "alias {{ item.alias }}='{{ item.command }}'"
+    regexp: "^alias {{ item.alias }}="
+    state: present
+  loop:
+    - { alias: ll, command: "ls -lFh" }
+    - { alias: la, command: "ls -lFhA" }
+    - { alias: l,  command: "ls -CF" }
 
-# - include: node_exporter.yml
-#   when:
-#     - pifarm_connected_internet
-#     - pifarm_node_exporter
-#   tags:
-#     - setup_node_exporter
-
+- name: Expand Bash History
+  lineinfile:
+    dest: ~{{ console_user | default(ansible_user) }}/.bashrc
+    line: "{{ item.key }}={{ item.value }}"
+    regexp: '^#?\s*{{ item.key }}='
+    state: present
+  loop:
+    - { key: HISTCONTROL,  value: ignoreboth }
+    - { key: HISTSIZE,     value: 100000 }
+    - { key: HISTFILESIZE, value: 100000 }
+    - { key: HISTIGNORE,   value: "'ls:bg:fg:history'" }
