--- a/roles/grafana_server/tasks/main.yml
+++ b/roles/grafana_server/tasks/main.yml
@@ -1,32 +1,35 @@
 ---
 
-- name: "Include  Raspian vars"
-  include_vars: "Raspian.yml"
+- block:
 
-- name: "Install Grafana pkg"
-  include: "install-repo.yml"
+  - name: "Include Raspian vars"
+    include_vars: "Raspian.yml"
 
-- name: "Install grafana raspberry pi"
-  include: "install-Raspian.yml"
-  when: vars['ansible_distribution_release'] == 'buster'
+  - name: "Install Grafana pkg"
+    include: "install-repo.yml"
 
-- name: "Configure grafana"
-  include: "config.yml"
+  - name: "Install grafana raspberry pi"
+    include: "install-Raspian.yml"
+    # when: vars['ansible_distribution_release'] == 'buster'
 
-- name: "Configure Provisioning"
-  include: "provision.yml"
+  - name: "Configure grafana"
+    include: "config.yml"
 
-- name: "Enable and (re)start grafana service"
-  service:
-    name: "{{ grafana_service_name }}"
-    enabled: yes
-    state: restarted
-  become: yes
+  - name: "Configure Provisioning"
+    include: "provision.yml"
 
-- name: "Wait for grafana to start"
-  wait_for:
-    port: "{{ grafana_http_port }}"
+  - name: "Enable and (re)start grafana service"
+    service:
+      name: "{{ grafana_service_name }}"
+      enabled: yes
+      state: restarted
+    become: yes
 
-#- name: "Install plugins"
-#  include: "install-plugins.yml"
+  - name: "Wait for grafana to start"
+    wait_for:
+      port: "{{ grafana_http_port }}"
 
+  #- name: "Install plugins"
+  #  include: "install-plugins.yml"
+
+  when: pifarm_grafana_server
