--- a/roles/grafana_server/vars/Raspian.yml
+++ b/roles/grafana_server/vars/Raspian.yml
@@ -1,7 +1,7 @@
 ---
-grafana_ubuntu_dist: buster
-grafana_repo_loc: "https://dl.grafana.com/oss/release"
-grafana_repo: "grafana_6.6.1_armhf.deb"
+#grafana_ubuntu_dist: buster
+#grafana_repo_loc: "https://dl.grafana.com/oss/release"
+#grafana_repo: "grafana_6.6.1_armhf.deb"
 grafana_defaults_file: /etc/default/grafana-server
 grafana_service_name: grafana-server
 grafana_cli: grafana
