--- a/roles/grafana_server/tasks/install-Debian.yml
+++ b/roles/grafana_server/tasks/install-Debian.yml
@@ -1,13 +1,9 @@
 ---
-- name: "Import apt key"
-  apt_key:
-    url: https://packagecloud.io/gpg.key
-    id: D59097AB
-    state: present
-  become: yes
 
-- name: "Enable apt repository"
-  apt_repository:
-    repo: "{{ grafana_repo }}"
-    update_cache: yes
+- name: Install grafana
+  apt: 
+    name: grafana
     state: present
+    update_cache: true
+  become: true
+
