--- a/roles/common/tasks/snmpd.yml
+++ b/roles/common/tasks/snmpd.yml
@@ -14,7 +14,7 @@
       state: stopped
 
 
-  - name: cofiguration 
+  - name: configuration 
     ansible.builtin.copy: 
       src: snmpd.conf
       dest: /etc/snmp/snmpd.conf
