working syslog and node_exporter

--- a/roles/cluster_prometheus/handlers/main.yml
+++ b/roles/cluster_prometheus/handlers/main.yml
@@ -2,8 +2,13 @@
 # handlers file for cluster_prometheus
 
 - name: Restart prometheus service
-  service:
+  ansible.builtin.service:
     name: prometheus
     state: restarted
   become: true
 
+- name: Restart node exporter
+  ansible.builtin.service:
+    name: prometheus-node-exporter
+    state: restarted
+  become: true
